<resources>
    <string name="app_name">XerJoinGroup</string>
    <string name="picktime">請選擇時間</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">+1</string>
    <string name="name">名稱：</string>
    <string name="type">運動種類：</string>
    <string name="time">時間：</string>
    <string name="place">地點：</string>
    <string name="gnumber">本團人數：</string>
    <string name="remain">剩餘人數：</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="findOne">找一個</string>
    <string name="createOne">揪一個</string>
    <string name="pleasechoose">尚未選擇時間</string>
</resources>
