<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonG"
        android:layout_width="108dp"
        android:layout_height="48dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="19dp"
        android:text="發布揪團"
        android:textColor="@android:color/white"
        android:background="@drawable/yellow_button"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/cName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="198dp"
        android:text="@string/name"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/cType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cName"
        android:layout_centerVertical="true"
        android:text="@string/type"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/cTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cType"
        android:layout_below="@+id/cType"
        android:layout_marginTop="25dp"
        android:text="@string/time"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/cPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cTime"
        android:layout_below="@+id/cTime"
        android:layout_marginTop="24dp"
        android:text="@string/place"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/cNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cPlace"
        android:layout_below="@+id/cPlace"
        android:layout_marginTop="22dp"
        android:text="@string/gnumber"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/sTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cTime"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_toEndOf="@+id/cTime"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pleasechoose"
        android:textAlignment="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/sName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cName"
        android:layout_toEndOf="@+id/cName"
        android:layout_toStartOf="@+id/imageView3"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:background="@drawable/rounded_corner"
        android:layout_alignBottom="@+id/cType"
        android:layout_toEndOf="@+id/cType"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignEnd="@+id/spinnerType"
        android:layout_alignTop="@+id/spinnerType"
        android:src="@drawable/drop" />

    <EditText
        android:id="@+id/sNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cNum"
        android:layout_alignBottom="@+id/cNum"
        android:layout_toEndOf="@+id/cNum"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinnerPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cNum"
        android:layout_alignEnd="@+id/sNum"
        android:layout_alignTop="@+id/cPlace"
        android:layout_toEndOf="@+id/cPlace"
        android:background="@drawable/rounded_corner" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerPlace"
        android:layout_alignEnd="@+id/spinnerType"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/spinnerPlace"
        android:src="@drawable/drop" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/sName"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        app:srcCompat="@drawable/logo" />


</RelativeLayout>