<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stanley.xerjoingroup.CreateGroupActivity">

    <Button
        android:id="@+id/buttonGroup"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:text="發布揪團"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="28dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintDimensionRatio="w,"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginBottom="84dp"
        android:layout_marginTop="85dp"
        android:text="@string/gnumber"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="53dp"
        android:text="@string/place"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_marginBottom="244dp"
        android:layout_marginTop="244dp"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="210dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:background="@drawable/rounded_corner"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:background="@drawable/rounded_corner"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="@+id/buttonG"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="234dp"
        android:layout_height="34dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="@+id/buttonG"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        tools:layout_editor_absoluteY="393dp"
        tools:layout_editor_absoluteX="110dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="31dp"
        app:srcCompat="@drawable/drop"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="@+id/spinner2"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="37dp"
        android:layout_height="31dp"
        app:srcCompat="@drawable/drop"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="22dp"
        android:background="#ededed"
        android:text="請選擇時間"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
